syntax = "proto3";
message Proc_Vec2
{
	 float valueX = 1;
	 float valueY = 2;
}

message Proc_Vec3
{
	 float valueX = 1;
	 float valueY = 2;
	 float valueZ = 3;
}

message Proc_Vec4
{
	 float valueX = 1;
	 float valueY = 2;
	 float valueZ = 3;
	 float valueW = 4;

}

message Proc_SpotLight
{
	 Proc_Vec2 pos = 1;
	 Proc_Vec4 color = 2;
	 Proc_Vec3 atenuation = 3;	
}
message Proc_ColiderBox
{
	 Proc_Vec2 pos = 1;
	 Proc_Vec2 dim = 2;
}

message Proc_Sprite
{
	 string texturePath = 1;
	 Proc_Vec2 dim = 2;
	 string name = 3;
	 string packetName = 4;
}
message Proc_OwnSprite
{
	 Proc_Sprite Proc_Sprite = 1;
	 Proc_Vec2 offsetPos = 2;
	 Proc_Vec2 offsetScale = 3;
	 Proc_Vec4 color = 4;
	 float depth = 5;
	optional float angle = 6; 
}
message Proc_Object 
{
	 string name = 1;
	repeated Proc_OwnSprite Proc_SpriteList = 2;
	repeated Proc_SpotLight lightList = 3;
	repeated Proc_ColiderBox coliderList = 4;
	

}